--- a/WebApplication2/WebApplication2.csproj
+++ b/WebApplication2/WebApplication2.csproj
@@ -257,7 +257,12 @@
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
     </Compile>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Entity\Entity.csproj">
+      <Project>{33119289-69a3-438a-9968-388252f7211b}</Project>
+      <Name>Entity</Name>
+    </ProjectReference>
+  </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
